kubernetes/apps/media/qbittorrent/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
      annotations:
        setGateway: "true"

    spec:
      containers:
        - name: qbittorrent
          image: ghcr.io/linuxserver/qbittorrent:5.0.0@sha256:d01b1df556154862eca982d0f2c420073e2e2959c309951fbfddd25525ea28ce
          imagePullPolicy: Always
          resources: {}
          ports:
            - containerPort: 8080
            # - containerPort: 52716
            # - containerPort: 52716
            #   protocol: UDP
          volumeMounts:
            - name: qbittorrent-config
              mountPath: /config
            - name: samba-volume
              mountPath: /downloads
              subPath: downloads
      volumes:
        - name: samba-volume
          nfs:
            server: 192.168.1.111
            path: /mnt/STORAGE-01/Media-Storage
        - name: qbittorrent-config
          persistentVolumeClaim:
            claimName: qbittorrent-config
