kubernetes/apps/media/qbittorrent/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-service
  annotations:
    metallb.universe.tf/loadBalancerIPs: 192.168.1.111
spec:
  type: LoadBalancer
  selector:
    app: qbittorrent
  ports:
    - name: qbittorrent-udp
      protocol: UDP
      port: 52716
      targetPort: 52716
    - name: qbittorrent-tcp
      protocol: TCP
      port: 52716
      targetPort: 52716
    - name: qbittorrent-webui
      protocol: TCP
      port: 80
      targetPort: 8080
