kubernetes/apps/media/qbittorrent/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent
spec:
  ingressClassName: internal
  rules:
    - host: &host qbittorrent.local.solonsstuff.co
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qbittorrent-service
                port:
                  number: 80
  tls:
    - hosts:
        - *host
